# ad-analytics-pipeline

./: .env.example  .gitignore  LICENSE  README.md  config.py  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
data/samples/: google_ads_sample.json  meta_ads_sample.json  sample_invoice.txt
frontend/: TOUR_NOTE.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
services/: accounts.py  cache.py  scheduler.py  webhooks.py
services/analytics/: __init__.py  alerts.py  anomaly_detector.py  budget_pacer.py  comparison.py  dashboard.py  pdf_export.py  reports.py  roi.py
services/aws/: __init__.py  lambda_handler.py  s3_client.py  textract_client.py
services/etl/: __init__.py  extractors.py  loaders.py  pipeline.py  transformers.py
services/marketing/: __init__.py  ga4.py  google_ads.py  meta_ads.py  rate_limiter.py  unified_metrics.py
services/ocr/: __init__.py  extractor.py  invoice_parser.py  pdf_parser.py
tests/: conftest.py  test_accounts.py  test_alerts.py  test_analytics.py  test_api.py  test_aws.py  test_budget_pacer.py  test_cache.py  test_etl.py  test_marketing.py  test_ocr.py  test_pdf_parser.py  test_roi.py  test_scheduler.py
